# tku-113-1-statistics-report

./: LICENSE  README.md  machine_learning.ipynb  machine_learning_2.ipynb  poetry_add.sh  pyproject.toml  requirements.txt  statistics_bar_chart.ipynb  svm.ipynb  test.py
