[tool.poetry]
name = "sleep-health"
version = "0.1.0"
description = ""
authors = ["JiaLong0209 <smt02091395@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
mlxtend = "^0.23.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
